--- a/.github/workflows/Build-MKSU-SUSFS4OPAce2.yml
+++ b/.github/workflows/Build-MKSU-SUSFS4OPAce2.yml
@@ -113,7 +113,10 @@ jobs:
            sed -i "/ksu_try/! s#$old_zygote#$new_zygote#g" KernelSU/kernel/core_hook.c
 
            cp ../kernel_patches4mksu/2core_hook.patch ./
-           patch -p1 -F 3 < 2core_hook.patch
+           patch -p1 --fuzz=3 < ./2core_hook.patch
+           cp ../kernel_patches4mksu/3core_hook.patch ./
+           patch -p1 --fuzz=3 < ./3core_hook.c_fix.patch
+           
            #cp ../kernel_patches4mksu/selinux.c_fix.patch ./
            #patch -p1 -F 3 < selinux.c_fix.patch
            
