--- a/.github/workflows/Build-MKSU-SUSFS4OPAce2.yml
+++ b/.github/workflows/Build-MKSU-SUSFS4OPAce2.yml
@@ -82,8 +82,15 @@ jobs:
         run: |
          cd kernel_workspace/kernel_platform
          curl -LSs "https://raw.githubusercontent.com/5ec1cff/KernelSU/refs/heads/main/kernel/setup.sh" | bash -
-         cd KernelSU       
-         git revert -m 1 36120da9 -n
+         cd KernelSU
+         COMMIT_HASH=$(git log --grep="remove devpts hook" --pretty=format:"%H" -1)
+          if [ -z "$COMMIT_HASH" ]; then
+            echo "WARNING: No matching commit found."
+            COMMIT_HASH="36120da"
+          fi
+         echo "COMMIT_HASH=$COMMIT_HASH" >> $GITHUB_ENV
+         echo "hash=$COMMIT_HASH" >> $GITHUB_OUTPUT
+         git revert -m 1 $COMMIT_HASH -n         
          KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
          echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
          sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
